# qwert

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  init.completions.sh  init.sh  install.sh  run
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bump-recipes-version.yml  release.yml
.project/changes/: 20260329000000_qwert_v2_overhaul.md
.project/make/: deploy.mk
commands/: list.sh  reinstall.sh  setup.sh  status.sh  update.sh  version.sh
commands/status/: all.sh
config/lvim/: config.lua
config/tmux/: .tmux.conf
config/zsh/: init.sh
macos/: setup.sh
macos/setup/: all.sh  config.sh  homebrew.sh  lvim.sh  tmux.sh
recipes/: VERSION  delta.toml  homebrew.toml  iterm2.toml  lvim.toml  neovim.toml  tmux.toml
recipes/asdf/: install.toml  setup.toml
recipes/claude/: setup.toml
recipes/delta/: install.toml  setup.toml
recipes/iterm2/: install.toml  setup.toml
recipes/lvim/: install.toml  setup.toml
recipes/neovim/: setup.toml
recipes/ohmyzsh/: install.toml
recipes/powerlevel10k/: install.toml  setup.toml
recipes/tmux/: install.toml  setup.toml
scripts/: completions.sh  init.sh  install.sh  release.sh
shared/: setup.sh
src/: cli.rs  main.rs
src/adapters/: apt.rs  brew.rs  mod.rs  pacman.rs
src/commands/: apply.rs  completions.rs  config.rs  doctor.rs  drop_cmd.rs  help.rs  hook.rs  info.rs  install_cmd.rs  list.rs  mod.rs  recipes_cmd.rs  reinstall.rs  search.rs  search_complete_cmd.rs  self_cmd.rs  setup_cmd.rs  status.rs  uninstall_cmd.rs  update.rs  upgrade.rs  use_cmd.rs  versions_cmd.rs
(+51 files in other folders)
