[package]
name = "qwert"
version = "0.2.0"
edition = "2021"
description = "Dev environment manager for macOS and Linux"

[[bin]]
name = "qwert"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
toml = "0.8"
anyhow = "1"
dirs = "5"
